// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component render button when disabled 1`] = `
<DocumentFragment>
  <button
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-white bg-primary-500 font-semibold hover:bg-primary-600 focus:border-primary-200 focus:bg-primary-500  disable:bg-primary-500  active:bg-primary-700  text-[12px] pt-[5px] pb-[5px] pl-[16px] pr-[16px] opacity-40 cursor-not-allowed "
    data-testid="buttonComponent"
    disabled=""
  >
    Test Button
  </button>
</DocumentFragment>
`;

exports[`Button component renders button as a link with icon on the left 1`] = `
<DocumentFragment>
  <a
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-secondinary-300 font-semibold bg-transparent hover:text-secondinary-500 hover:bg-white active:bg-secondinary-100 active:text-secondinary-500 focus:border-secondinary-300 focus:text-secondinary-500 focus:bg-white text-[12px] pt-[5px] pb-[5px] pl-[16px] pr-[16px] flex items-center w-max gap-[4px]"
    data-testid="buttonComponent"
    href="#"
  >
    <img
      alt="Left Icon"
      src="/path/to/icon.png"
    />
     Test Button
  </a>
</DocumentFragment>
`;

exports[`Button component renders button with  style minimal and LARGE size 1`] = `
<DocumentFragment>
  <button
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-secondinary-300 font-semibold bg-transparent hover:text-secondinary-500 hover:bg-white active:bg-secondinary-100 active:text-secondinary-500 focus:border-secondinary-300 focus:text-secondinary-500 focus:bg-white text-[16px] pt-[13px] pb-[13px] pl-[41px] pr-[41px]"
    data-testid="buttonComponent"
  >
    Test Button
  </button>
</DocumentFragment>
`;

exports[`Button component renders button with only icon 1`] = `
<DocumentFragment>
  <button
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-secondinary-300 font-semibold bg-transparent hover:text-secondinary-500 hover:bg-white active:bg-secondinary-100 active:text-secondinary-500 focus:border-secondinary-300 focus:text-secondinary-500 focus:bg-white text-[12px] pt-[5px] pb-[5px] pl-[16px] pr-[16px]"
    data-testid="buttonComponent"
  >
    <img
      alt="Icon"
      src="/path/to/icon.png"
    />
  </button>
</DocumentFragment>
`;

exports[`Button component renders button with primary style and medium size 1`] = `
<DocumentFragment>
  <button
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-white bg-primary-500 font-semibold hover:bg-primary-600 focus:border-primary-200 focus:bg-primary-500  disable:bg-primary-500  active:bg-primary-700  text-[12px] pt-[9px] pb-[9px] pl-[16px] pr-[16px]"
    data-testid="buttonComponent"
  >
    Test Button
  </button>
</DocumentFragment>
`;

exports[`Button component renders button without icon 1`] = `
<DocumentFragment>
  <button
    class="font-primary rounded-[10px] focus:border-[1px] focus:border-solid transition-all ease-in-out  duration-500 text-secondinary-300 font-semibold bg-transparent hover:text-secondinary-500 hover:bg-white active:bg-secondinary-100 active:text-secondinary-500 focus:border-secondinary-300 focus:text-secondinary-500 focus:bg-white text-[12px] pt-[5px] pb-[5px] pl-[16px] pr-[16px]"
    data-testid="buttonComponent"
  >
    Test Button
  </button>
</DocumentFragment>
`;
